# knowledge

./: .gitignore  README.md  linkcheck.txt  terms.cache
config/: install.sh  pkglist.txt
dotfiles/: QtProject.conf  mimeapps.list  pavucontrol.ini  user-dirs.dirs  zoomus.conf
note/: README.md  checksheet.md
note2/: README.md
note3/: README.md
note_old/: README.md
quiz/: quiz_1.html  (+3740 more)
tools/qzgen/: Cargo.toml  index.html  style.css  terms.cache
tools/qzgen/css/: prism.css  style.css  style.scss  theme.scss
tools/qzgen/css/page/: home.scss  quiz.scss  record.scss
tools/qzgen/js/: prism.js
tools/qzgen/scss/: common.scss  style.scss  theme.scss  ui.scss
tools/qzgen/scss/page/: home.scss  record.scss
tools/qzgen/src/: app.rs  data.rs  functions.rs  language.rs  main.rs  term.rs  theme.rs
tools/qzgen/src-tauri/: Cargo.toml  tauri.conf.json
tools/qzgen/src-tauri/migrations/: 000_init.sql
tools/qzgen/src-tauri/src/: command.rs  data.rs  database.rs  main.rs
tools/qzgen/src.bkup/: app.rs  main.rs
tools/qzgen/src.bkup/component/header/: language_select.rs  settings_icon.rs  settings_popup.rs  theme_select.rs
tools/qzgen/src.bkup/component/popup/: mod.rs
tools/qzgen/src.bkup/panel/: answer_panel.rs  quiz_panel.rs  score_panel.rs
tools/qzgen/src/api/: github.rs  mod.rs
tools/qzgen/src/common/: header.rs
tools/qzgen/src/component/: mod.rs
tools/qzgen/src/component/header/: api_key_input.rs  language_select.rs  mod.rs  settings_icon.rs  settings_popup.rs  theme_select.rs
tools/qzgen/src/component/icons/: check_icon.rs  close_icon.rs  home_icon.rs  mod.rs  quiz_icon.rs
tools/qzgen/src/component/loading/: mod.rs
tools/qzgen/src/component/popup/: mod.rs
tools/qzgen/src/component/quiz_panel/: mod.rs
tools/qzgen/src/converter/: mod.rs  strategy.rs
tools/qzgen/src/converter/strategy/: mod.rs
tools/qzgen/src/converter/strategy/markdown/: mod.rs  section.rs
tools/qzgen/src/data_source/: file.rs  mod.rs
tools/qzgen/src/page/: mod.rs
tools/qzgen/src/page/home/: mod.rs
tools/qzgen/src/page/quiz/: answer_popup.rs  mod.rs  quit_popup.rs
tools/qzgen/src/page/record/: mod.rs  record_list.rs
tools/qzgen/src/panel/: mod.rs  panel_score.rs  quiz_panel.rs
tools/qzgen/src/quiz/: judge.rs  mod.rs  score.rs
tools/qzgen/src/term/: dictionary.rs  mod.rs
tools/qzgen_web/terms_register/: .env  Cargo.toml
tools/qzgen_web/terms_register/src/: main.rs
(+4736 files in other folders)
