[package]
name = "qzgen-ui"
version = "0.0.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.64", features = [] }
sycamore = { version = "0.8", features = ["suspense"] }
console_log = "0.2.0"
log = "0.4.17"
reqwest = "0.11.18"
select = "0.6.0"
rand = "0.8.5"
getrandom = { version = "0.2.10", features = ["js"] }
urlencoding = "2.1.2"
