[package]
name = "qzgen-ui"
version = "0.0.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.64", features = [] }
sycamore = { version = "0.8", features = ["suspense"] }
console_log = "0.2.0"
log = "0.4.17"

reqwest = "0.11.18"
serde = { version = "1.0.171", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.102"
pulldown-cmark = "0.9.3"
regex = "1.9.1"
sycamore-router = "0.8.0"
