[package]
name = "qzgen"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tokio = { version = "1.29.1", features = ["full"] }
futures = "0.3.28"
directories = "5.0.1"
dunce = "1.0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
