[package]
name = "terms_register"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "mysql", "migrate"] }
dotenv = "0.15.0"
regex = "1.9.1"
chrono = "0.4.26"
reqwest = "0.11.18"
zip = "0.6.6"
